--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+  <h2>Welcome to the Amsilla Editor</h2>
+  <p>The Amsilla Editor allows you to add-on syntax and error highlighting. In the demo below, we have a keyword "error" that appears with a red squiggly line.</p>
   <div id='syntax'></div>
   <textarea id='write' spellcheck="false">error</textarea>
   <script>
