--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
   <script>
     function amsillaEditorProcess(data) {
-      return data.replaceAll("error","<span class='error'>error</span>") + "This text does not exist in the textarea.";
+      return data.replaceAll("error","<span class='error'>error</span>") + "<span class='key'>Tab</span> Some text!";
     }
   </script>
   <script src="editor.js"></script>
