--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       if (data == "") {
         return "Need some ideas? <button>View Templates</button>. Start typing to hide this message.";
       }
-      return data.replaceAll("error","<span class='error'>error</span>") + "<span class='key'>Tab</span> Some text!";
+      return data.replaceAll("error","<span class='error'>error</span>") + "<wbr><span class='key'>Tab</span> Some text!";
     }
   </script>
   <script src="editor.js"></script>
