--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h2>Welcome to the Amsilla Editor</h2>
-  <p>The Amsilla Editor allows you to add-on syntax and error highlighting. In the demo below, "error" appears with a red line underneath. Try typing some more "error"'s!</p>
+  <p>The Amsilla Editor allows you to add-on syntax and error highlighting. In the demo below, "error" appears with a red line underneath. Try typing some more "error"s, deleting all the content, or deleting all the content and typing lowercase 'a'!</p>
   <div class='editor'>
     <div id='syntax'></div>
     <textarea id='write' spellcheck="false">error</textarea>
