--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         textarea.value += toAdd;
         return data + toAdd;
       }
-      return data.replaceAll("error","<span class='error'>error</span>") + "<wbr><span class='key'>Tab</span> Some text!";
+      return data.replaceAll("error","<span class='error'>error</span>").replaceAll("&","<span class='key'>&</span>") + "<wbr><span class='key'>Tab</span> Some text!";
     }
   </script>
   <script src="editor.js"></script>
