--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
 <body>
   <h2>Welcome to the Amsilla Editor</h2>
-  <p>The Amsilla Editor allows you to add-on syntax and error highlighting. In the demo below, "error" appears with a red line underneath. Try typing some more "error"s, or deleting all the content,!</p>
-  <div class='editor'>
-    <div id='syntax'></div>
-    <textarea id='write' spellcheck="false">error</textarea>
-  </div>
+  <p>The Amsilla Editor allows you to add-on syntax and error highlighting. In the demo below, "error" appears with a red line underneath. Try typing some more "error"s, or deleting all the content!</p>
+  <div id='syntax'></div>
+  <textarea id='write' spellcheck="false">error</textarea>
+  <h1>G</h1>
   <script>
     function amsillaEditorProcess(data) {
       if (data == "") {
