--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Amsilla Editor</title>
   <link href="editor.css" rel="stylesheet" type="text/css" />
+  <link href="orig.css" rel="stylesheet" type="text/css" />
   <script src="editor.js"></script>
 </head>
 
