--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <p>The Amsilla Editor allows you to add-on syntax and error highlighting. In the demo below, "error" appears with a red line underneath. Try typing some more "error"s, or deleting all the content!</p>
   <div id='syntax'></div>
   <textarea id='write' spellcheck="false">error</textarea>
-  <h1>G</h1>
+  <h1>Open Source</h1>
+  <a href="https://github.com/Fairies-Feast/amsilla-editor/tree/main">Open source link</a>
   <script>
     highlight(document.getElementById('syntax'),document.getElementById('write'),function(e){
       if (e == "") {
